--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -68,8 +68,8 @@
         <h1>Key {{ generator.number }}: {{ generator.title }} </h1>
         <section class="general tarot_key_background">          
 
-          <div class="prent_for_animations">
-            <span class="card_animation_ch"></span>
+          <div class="parent_for_animations">
+            <span class="card_animation_child"></span>
             <img class='img_class card_animation' src="{{ generator.tarot_card_image }}" alt="tarot key" />
           </div>
           <ul class="esoteric-attributes">
