--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -1175,8 +1175,18 @@ border: 4px dashed crimson;
     text-align: center;
 }
 
-#title {
+.title {
   text-align:center;
   margin-bottom: 75px;
+  margin-top: 55px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;
+}
+
+
+.title-bylines {
+  text-align:center;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;
+  font-size: 1.5em;
 }
