--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -18,7 +18,7 @@
         <div class="essay-meta-data">
           <h6>First Posted: March 20, 2021 11:12 a.m. GMT</h6>
           <h6>Last Updated: {{ slashdot_obj.date_changed }} GMT</h6>
-          <h6>Author: {{ slashdot_obj.authors }}</h6>
+          <h6>Authorship: {{ slashdot_obj.authors }}</h6>
           <h6><a href="{% url 'content_changelog' %}">Site-wide content changelog here.</a></h6>
         </div>
         <p> {{ slashdot_obj.introduction|safe }} </p>
