--- a/templates/landings/about.html
+++ b/templates/landings/about.html
@@ -179,6 +179,9 @@
             width: 90%;
          }
       }
+      .authorship {
+         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;
+      }
       </style>
       {% endblock %}
 {% block content %}    
