Add 'bio' to nav_bar partial

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -37,7 +37,7 @@
               class="nav-item menu_spacing menu_spacing mx-sm-auto align-self-center"
             {% endif %}
           >
-            <a class="nav-link" href="{% url 'about' %}">About</a>
+            <a class="nav-link" href="{% url 'about' %}">About & Bio</a>
           </li>
 
           <li 
