--- a/templates/landings/about.html
+++ b/templates/landings/about.html
@@ -180,7 +180,7 @@
          }
       }
       .authorship {
-         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;
+         text-shadow: -1px 0 black, 0 -1px black, 0 0 10px #fff,  0 0 10px #fff;
       }
       </style>
       {% endblock %}
