Add 'author bios' to portal template

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -115,7 +115,7 @@
     
 
     <!-- To landing page explaining "why" and "what" of this website:  -->
-    <h3><a href="{% url 'about' %}">About This Website</a></h3>
+    <h3><a href="{% url 'about' %}">About This Website and Author Bios</a></h3>
     
     {% if protection.is_protected %}
     <!-- This means, protection is turned On -->
