--- a/templates/landings/essay_list.html
+++ b/templates/landings/essay_list.html
@@ -19,6 +19,7 @@
 
 {% block content %}    
 
+{% if essay_list_obj %}
 <article class="article">
 <div class="essay">   
 
@@ -32,6 +33,7 @@
 
 </div><!-- end essay -->
 </article>
+{% endif %}
 
 
 {% endblock %}
