--- a/templates/landings/how_to.html
+++ b/templates/landings/how_to.html
@@ -32,6 +32,7 @@
 
 {% block content %}    
 
+{% if how_to_obj %}
 <article class="article">
 <div class="essay">   
 
@@ -46,6 +47,6 @@
 
 </div><!-- end essay -->
 </article>
-
+{% endif %}
 
 {% endblock %}
