--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -66,7 +66,7 @@
 
       <div class="key gradient_background">
 
-        <h1>Key {{ generator.number }}: {{ generator.title }} </h1>
+        <h1>Card {{ generator.number }}: {{ generator.title }} </h1>
         <section class="general tarot_key_background">          
 
           <div class="parent_for_animations">
