--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{% static 'css/gateway.css' %}" type="text/css">
   <title>Protected Gateway</title>
   <link rel="icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
-  
+
 
   <!-- Google tag (gtag.js) - Google Analytics - ROTA -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-59HTYTYG2Z"></script>
@@ -20,7 +20,7 @@
     gtag('config', 'G-59HTYTYG2Z');
   </script>
   <!-- END GOOGLE ANALYTICS -->
-  
+
   <!-- Matomo -->
   <script>
     var _paq = window._paq = window._paq || [];
@@ -61,7 +61,7 @@
   <img id="muerte" src="{% static 'img/wings-white-cropped.png' %}">
 
   <h3>
-    This website is Hermetically Sealed  
+    This website is Hermetically Sealed
   </h3>
 
   {% endif %}
@@ -77,10 +77,21 @@
         <label for="passphrase">To access, please enter your passphrase:</label>
         <br>
 
+        <!-- <input type="text" name="username" class="form-control" required>
         <input type="password" name="passphrase" class="form-control" required>
       </div>
-      <input class="submit" type="submit" value="Submit" class="btn btn-secondary btn-block">
+      <input class="submit" type="submit" value="Submit" class="btn btn-secondary btn-block"> -->
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" name="username" class="form-control" required>
+      </div>
 
+      <div class="form-group">
+        <label for="password2">Password</label>
+        <input type="password" name="password" class="form-control" required>
+      </div>
+
+      <input type="submit" value="Login" class="btn btn-secondary btn-block">
     </form>
   </div>
 
