--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -23,9 +23,27 @@
           <p style="color:black; text-align:center;" >Please login to see this page</p>
       {% endif %}
   {% endif %}
-     
+  
+  {% if not faravahar %}
+
+  <img src="https://placekitten.com/200/287">
+
+  <h3> This website is hermetically sealed
+    <br>
+    It's protected by adorable little KITTENS
+  </h3>
+
+  {% else %}
+
+  <img id="muerte" src="{% static 'img/wings-white-cropped.png' %}">
+
+  <h3>
+    This website is Hermetically Sealed  
+  </h3>
+
+  {% endif %}
                     
-        {% if controls.nuclear %}
+        {% if nuclear %}
 
                <h1> Site-wide access revoked</h1>
 
