Removed DB warning notifications via CSS property

--- a/tarot_juicer/static/css/portal.css
+++ b/tarot_juicer/static/css/portal.css
@@ -383,7 +383,7 @@ transform: rotate(360deg);
   }
 
   .container {
-    display: block !important;
+    display: none; /*block !important;*/
     opacity: 1 !important;
   }
 
