Restore degenerate and mysterious curly close brace

--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -810,7 +810,7 @@ section > ul.esoteric-attributes{
   margin-left: 5%;
 }
 
-
+}
 
 @media (min-width: 780px) /*and (min-width: 768px)*/ {
   section.general {
