--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -487,7 +487,7 @@ section.general .parent_for_animations {
   margin: auto;
   margin-bottom: 50px;
   margin-top: 0px;
-  font-size: 96%;
+  font-size: 90%;
   font-weight: bold;
   font-family: Courier, Monaco, monospace;
   line-height: 40px;
@@ -781,7 +781,7 @@ body section>ul.esoteric-attributes {
   display: inline-block;
   margin-left: 0;
   position: absolute;
-  bottom:15%;
+  top:12%;
 }
 .parent_for_animations img {
   width: 45%;
