--- a/templates/landings/about.html
+++ b/templates/landings/about.html
@@ -187,7 +187,7 @@
 {% block content %}    
 {% if about_content_obj %}
 <article class="article">
-   <center><img id="#horus" class="horus" src="https://i.imgur.com/AKQZfR6.gif" alt="Horus"></center> 
+   <center><img id="#horus" class="horus" src="https://i.imgur.com/4g5pCuY.gif" alt="Horus"></center> 
 <div class="essay">
    
 {% if abouts %}
