Adjust input box font, bg color and sizing

--- a/templates/accounts/gateway.html
+++ b/templates/accounts/gateway.html
@@ -123,8 +123,8 @@
       font-size: 1.2rem;
       padding: 12px; /* room for icon on right */
       box-sizing: border-box;
-      color: white;
-      background-color: black;
+      color: black;
+      background-color: white;
       border: 1px solid crimson;
     }
     
