--- a/templates/accounts/gateway.html
+++ b/templates/accounts/gateway.html
@@ -66,13 +66,15 @@
           
           <div class="password-wrapper">
             {{ form.password|add_class:"password-input" }}
+            
+          </div> 
+          <div class="eye-pass-break">
             <button type="button" onclick="togglePassword()" class="toggle-password-btn" aria-label="Toggle Password">
               <i id="toggle-icon" class="fa-solid fa-eye-slash"></i>
             </button>
-          </div>
           
           <input type="submit" value="Login">
-
+        </div>
         </h2>
       
         <input type="hidden" name="next" value="{{ next }}">
@@ -129,17 +131,17 @@
     }
     
     .toggle-password-btn {
-      position: absolute;
-      top: 60%;
-      right: -125px;
-      transform: translateY(-50%);
+      /*position: absolute;
+      top: 50%;
+      right: 60%;
+      transform: translateY(-50%);*/
       background: none;
       border: none;
       padding: 0;
-      margin: 0;
+      margin: 10px auto;      
       cursor: pointer;
-      height: 100%;
-      display: flex;
+      /* height: 100%;*/
+      /*display: flex;*/
       align-items: center;
       justify-content: center;
     }
@@ -158,10 +160,18 @@
     padding: 15px;
     border: 1px solid crimson;
   }
+  
   /*
   h2 {
     width: 50%;
-  }*/
+  }
+  */
+
+  /*
+  .eye-pass-break {
+    margin:200px;
+  }
+  */
   </style>
 </body>
 
