--- a/templates/accounts/gateway.html
+++ b/templates/accounts/gateway.html
@@ -29,7 +29,7 @@
   
   {% if not faravahar %}
 
-  <img src="https://placekitten.com/200/287">
+  <img src="https://placecats.com/millie_neo/300/200">
 
   <h3> This website is hermetically sealed
     <br>
